--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,16 +16,17 @@ build:
 
 requirements:
   host:
-    - python >=3.7
-    - pip
-    - nodejs
     - jupyter-packaging
-  run:
+    - nodejs
+    - pip
+    - jupyterlab >=2.0.0
     - python >=3.7
+  run:
     - fs >=2.4.11
     - fs-s3fs >=1.1.1
     - jupyterlab >=2.0.0
     - notebook >=5.7.0
+    - python >=3.7
 
 test:
   imports:
