--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,13 +19,13 @@ requirements:
     - jupyter-packaging
     - nodejs
     - pip
-    - jupyterlab >=2.0.0
-    - python >=3.7
+    - jupyterlab >=4,<5
+    - python >=3.8
   run:
     - fs >=2.4.11
     - fs-s3fs >=1.1.1
-    - jupyterlab >=2.0.0
-    - notebook >=5.7.0
+    - jupyterlab >=4,<5
+    - jupyter_server >=2,<3
     - python >=3.7
 
 test:
