--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,6 +19,8 @@ requirements:
     - jupyter-packaging
     - nodejs
     - pip
+    - hatchling >=1.3.1
+    - hatch-jupyter-builder
     - jupyterlab >=4,<5
     - python >=3.8
   run:
