--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,12 +24,15 @@ requirements:
     - jupyterlab >=4,<5
     - python {{ python_min }}
   run:
-    - fs >=2.4.11
-    - fs-s3fs >=1.1.1
-    - fs.smbfs >=0.6.3
     - jupyterlab >=4,<5
     - jupyter_server >=2,<3
     - python >={{ python_min }}
+  run_constrained:
+    - fs >=2.4.11
+    - fs-s3fs >=1.1.1
+    - fs.smbfs >=0.6.3
+    - fsspec >=2023.6.0
+    - s3fs >=2024
 
 test:
   imports:
